<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jadidlar</string>
    <string name="books">Kitoblar</string>
    <string name="tests">Testlar</string>
    <string name="maxsus_tests">Maxsus testlar</string>
    <string name="search">Qidirish</string>
    <string name="read">O\'qish</string>
    <string name="no_data">Ma\'lumot topilmadi</string>
    <string name="download_started">Yuklab olish boshlandi</string>
    <string name="start_test">Testni boshlash</string>
    <string name="results">Natijalar</string>
    
    <!-- Quiz -->
    <string name="quiz">Test</string>
    <string name="your_score">Sizning natijangiz</string>
    <string name="answers_review">Javoblarni ko\'rish</string>
    <string name="retake_quiz">Testni qayta topshirish</string>
    <string name="true_answer">To\'g\'ri javob</string>
    <string name="false_answer">Noto\'g\'ri javob</string>
    <string name="your_answer">Sizning javobingiz</string>
    <string name="previous_question">Oldingi savol</string>
    <string name="next_question">Keyingi savol</string>
    <string name="finish_test">Testni yakunlash</string>
    <string name="correct_answer">To\'g\'ri javob</string>
    <string name="your_answer_label">Sizning javobingiz</string>
    <string name="explanation">Tushuntirish</string>
    
    <!-- Error -->
    <string name="error_occurred">Xatolik yuz berdi</string>
    <string name="retry">Qayta urinish</string>
    
    <!-- Menu -->
    <string name="added_to_favorites">Sevimlilar</string>
    <string name="share">Ulashish</string>
    
    <!-- Onboarding Quiz -->
    <string name="onboarding_quiz_title">Kirish testi</string>
    <string name="onboarding_quiz_skip">O\'tkazib yuborish</string>
    <string name="onboarding_quiz_completed">Kirish testi muvaffaqiyatli yakunlandi!</string>
    <string name="onboarding_quiz_loading">Kirish testi yuklanmoqda…</string>
    <string name="onboarding_quiz_error">Kirish testini yuklashda xatolik</string>
    <string name="onboarding_quiz_not_found">Kirish testi topilmadi</string>
    <string name="onboarding_quiz_reset">Kirish testini qayta o\'tkazish (debug)</string>
    <string name="onboarding_quiz_reset_success">Kirish testi qayta o\'rnatildi</string>
</resources>
